deploy/bookings-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bookings
spec:
  replicas: 2
  template:
    metadata:
      labels:
        myevents/app: bookings
        myevents/tier: api
    spec:
      imagePullSecrets:
      - name: my_private_registry
      containers:
      - name: api
        imagePullPolicy: Never
        image: index.docker.io/michaljirman/myevents_bookingservice:v1.0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
          name: http
