deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    myevents/app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
